--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,15 @@
 body {
- 	background: #fff;
+ 	background: #150D2B;
 }
 .panel {
-	border-radius: 0px;
+	border-radius: 8px;
+	background: none;
+}
+.panel-body {
+	padding: 20px 15px;
+	background: #41464a;
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
 }
 canvas {
   	transform: scale(0.5);
@@ -17,7 +24,7 @@ canvas {
 }
 .col-md-12 {
 	float: none;
-	max-width: 780px;
+	max-width: 880px;
 	margin: 0 auto;
 }
 #colors {
@@ -26,40 +33,60 @@ canvas {
 #avatar {
   	text-align: center;
 }
-#avatar img{ 
+#avatar img { 
   	width: 120px; margin:2px; padding: 12px;
 }
+
 #menu {
   	text-align: center; font-weight: bold;
+ 
 }
 .btn-primary {
 	background: #fff; color: #1c2a40;
 }
 .btn-primary:hover, .btn-primary:active:hover {
-	background: #f5f5f5;
+	background: #ddd;
 	color: #1c2a40;
 }
 .btn-success {
-
+	background-color: #3490de;
+}
+.btn-success:hover, .btn-success:active:hover {
+	background-color: #4285f4;
 }
 .panel-heading {
   	padding: 0;   	
-  	border-top-right-radius: 0px;
-  	border-top-left-radius: 0px;
+  	border-top-right-radius: 8px;
+  	border-top-left-radius: 8px;
 }
 .panel-success>.panel-heading {
-  	background: #eee
+  	background: #f5f5f5;
+}
+#menu span {
+	border: rgba(0,0,0,0) 4px solid;
+	color: #444;
+	background: none;
+	border-radius: 4px;
+	cursor: pointer; margin: 0 12px;
+	padding: 12px 8px;
+	display: inline-block;
+    max-width: 100%;
+    height: auto;
 }
 #menu .tab-active {    
-  	border-bottom: #222 4px solid;
+  	border-bottom: #3490de 4px solid;
 }
 .img-thumbnail {
 	border: rgba(0,0,0,0) 4px solid;
 	color: #444;
 	background: none;
-	border-radius: 0;
+	border-radius: 4px;
 	cursor: pointer; margin: 0 20px;
+	border: rgba(0,0,0,0) 2px solid;
 }
-.selected, .active {
- 	border: #222 2px solid;
+.active {
+ 	border: #fff 2px solid;
+}
+.white-bg {
+	
 }
