--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,9 @@ canvas {
 
 #menu {
   	text-align: center; font-weight: bold;
- 
+}
+.btn {
+	
 }
 .btn-primary {
 	background: #fff; color: #1c2a40;
@@ -83,6 +85,9 @@ canvas {
 	border-radius: 4px;
 	cursor: pointer; margin: 0 20px;
 	border: rgba(0,0,0,0) 2px solid;
+	-webkit-filter: drop-shadow(0px 2px 4px rgba(0,0,0,0.4)); 
+	filter: drop-shadow(0px 2px 4px rgba(0,0,0,0.4));
+
 }
 .active {
  	border: #fff 2px solid;
